--- a/digital_events_repository/web/SI/administrador/ventas/indexVentas.xhtml
+++ b/digital_events_repository/web/SI/administrador/ventas/indexVentas.xhtml
@@ -10,120 +10,130 @@
                 xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="content">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/personajes-transformers.png" style="width: 250px; height: 550px;"/>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2><strong>TRANSFORMERS Y LOS VENGADORES</strong></h2>
-                        <h4>Fiestas Infantiles Tematicas: Optimus Prime, BumbleBee, Capitan America y IronMan pueden ser parte de tu fiesta</h4>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/coco-paw-patrol.png" style="width: 250px; height: 550px;"/>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/dinosaurios.png" style="width: 250px; height: 550px;"/>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2><strong>¡UN MUNDO INCREIBLE!</strong></h2>
-                        <h4>Las mejores atracciones con tecnologia de punta para que tus celebraciones sean unicas</h4>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
 
-        <br/>
-
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="card card-blog">
-                    <div class="card-header card-header-image">
-                        <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
-                                <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
-                                <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/personajes-transformers.png" style="width: auto; height: 300px;"/>
+        <div class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="card card-stats">
+                            <div class="card-header card-header-warning card-header-icon">
+                                <div class="card-icon">
+                                    <i class="fas fa-calendar-alt"></i>
                                 </div>
-                                <div class="carousel-item">
-                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/coco-paw-patrol.png" style="width: auto; height: 300px;"/>
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/dinosaurios.png" style="width: auto; height: 300px;"/>
+                                <p class="card-category">Eventos Finalizados</p>
+                                <h4 class="card-title">49<small>/50</small></h4>
+                            </div>
+                            <div class="card-footer">
+                                <div class="stats">
+                                    <i class="material-icons text-danger">warning</i>
+                                    <a href="#">Ir a eventos...</a>
                                 </div>
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
                         </div>
-                        <div class="card-title">
-                            Este inicio de año será asombroso...
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="card card-stats">
+                            <div class="card-header card-header-success card-header-icon">
+                                <div class="card-icon">
+                                    <i class="material-icons">account_balance</i>
+                                </div>
+                                <p class="card-category">Total Acumulado Hoy</p>
+                                <h4 class="card-title">$200.000</h4>
+                            </div>
+                            <div class="card-footer">
+                                <div class="stats">
+                                    <i class="material-icons">date_range</i>
+                                    Ultimas 24h
+                                </div>
+                            </div>
                         </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="card card-stats">
+                            <div class="card-header card-header-info card-header-icon">
+                                <div class="card-icon">
+                                    <i class="material-icons">person_add</i>
+                                </div>
+                                <p class="card-category">Usuarios Nuevos</p>
+                                <h4 class="card-title">+300</h4>
+                            </div>
+                            <div class="card-footer">
+                                <div class="stats">
+                                    <i class="material-icons">update</i>
+                                    Just uptaded
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="card-header card-chart card-header-info">
+                                <div class="ct-chart" id="myChartAdministrador"></div>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Ventas Diarias</h4>
+                                <p class="card-category">
+                                    <span class="text-success">
+                                        <i class="material-icons">trending_up</i> 55% 
+                                    </span> increase in today sales.
+                                </p>
+                            </div>
+                            <div class="card-footer">
+                                <div class="stats">
+                                    <i class="material-icons">access_time</i> Actualizado Ahora
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+
                     </div>                    
-                    <div class="card-body">
-                        <h6 class="card-category text-info">Fashion</h6>
-                        <p class="card-description">
-                            Don&apos;t be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens&#x2019; bed design but the back is...
-                        </p>
-                    </div>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card card-blog">
-                    <div class="card-header card-header-image">
-                        <a href="#pablo">
-                            <img class="img" src="#{request.contextPath}/resources/img/adult-band-crowd-348517.jpg"/>
-                            <div class="card-title">
-                                This Summer Will be Awesome
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card-body">
-                        <h6 class="card-category text-info">Fashion</h6>
-                        <p class="card-description">
-                            Don&apos;t be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens&#x2019; bed design but the back is...
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+            </div>     
+        </div>   
 
+    </ui:define>  
 
+    <ui:define name="scripts-grafricos">
+        <script>
+            var fechaReserva = [#{graficoReservasController.graficoReserva(graficoReservasController.fechaReserva, ",")}];
+            var numeroEventos = [#{graficoReservasController.graficoReserva(graficoReservasController.numeroEventos, ",")}];
+            window.onload = function ()
+            {
+                zingchart.render
+                        ({
+                            id: "myChartAdministrador",
+                            width: "100%",
+                            height: 300,
+                            data:
+                                    {
+                                        "type": "bar",
+                                        "title":
+                                                {
+                                                    "text": "Grafico "
+                                                },
+                                        "scale-x":
+                                                {
+                                                    "labels": fechaReserva
+                                                },
+                                        "plot":
+                                                {
+                                                    "line-width": 1
+                                                },
+                                        "series":
+                                                [
+                                                    {
+                                                        "values": numeroEventos
+                                                    }
+                                                ]
+                                    }
+                        });
+            };
 
-
-
-
-
-
-
-
-
-    </ui:define>    
-
-
-
-
+        </script>
+    </ui:define>
 
 </ui:composition>
 
