--- a/digital_events_repository/web/SI/index.xhtml
+++ b/digital_events_repository/web/SI/index.xhtml
@@ -4,63 +4,249 @@
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui">
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-        <ui:define name="scripts-grafricos">
-        <script>
-        var fechaReserva = [#{graficoReservasController.graficoReserva(graficoReservasController.fechaReserva, ",")}];
-        var numeroEventos = [#{graficoReservasController.graficoReserva(graficoReservasController.numeroEventos, ",")}];
-        window.onload = function ()
-        {
-            zingchart.render
-                    ({
-                        id: "myChartAdministrador",
-                        width: "100%",
-                        height: 300,
-                        data:
-                                {
-                                    "type": "bar",
-                                    "title":
-                                            {
-                                                "text": "Grafico "
-                                            },
-                                    "scale-x":
-                                            {
-                                                "labels": fechaReserva
-                                            },
-                                    "plot":
-                                            {
-                                                "line-width": 1
-                                            },
-                                    "series":
-                                            [
-                                                {
-                                                    "values": numeroEventos
-                                                }
-                                            ]
-                                }
-                    });
-        };
-
-    </script>
-    </ui:define>
     <ui:define name="content">
         
-        <!--HOLA ESTE ES UN TEXTO DE PRUEBA REPOSITORIO-->
+        <div class="card card-nav-tabs text-center">
+            <div class="card-header card-header-info">
+                <h4 class="card-title"><strong>TENEMOS LOS MEJORES SHOWS | PERSONAJES PARA CADA OCASIÓN</strong></h4>
+            </div>
+            <div class="card-body">
+                <p class="card-text">Diseñados especialmente para eventos infantiles de integración y final de año, día del niño, fiestas temáticas infantiles, atracciones mecánicas, show´s musicales, mundoIinflable, eventos navideños entre otros.</p>
+            </div>
+        </div>
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/personajes-transformers.png" style="width: 250px; height: 550px;"/>
+                    <div class="carousel-caption d-none d-md-block">
+                        <div class="card-title text-light">
+                            <h2><strong>TRANSFORMERS Y LOS VENGADORES</strong></h2>
+                            <h4>Fiestas Infantiles Tematicas: Optimus Prime, BumbleBee, Capitan America y IronMan pueden ser parte de tu fiesta</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/coco-paw-patrol.png" style="width: 250px; height: 550px;"/>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/dinosaurios.png" style="width: 250px; height: 550px;"/>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2><strong>¡UN MUNDO INCREIBLE!</strong></h2>
+                        <h4>Las mejores atracciones con tecnologia de punta para que tus celebraciones sean unicas</h4>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <div class="card text-center" style="width: 64.2rem;">
+                    <div class="card-body">
+                        <h4 class="card-title"><strong class="text-info">¿Quieres tener alguno de nuestros Personajes en la Fiesta de Tus Hijos?</strong></h4>
+                        <p class="card-text">COCO, PAW PATROL, ANGRY BIRDS, SOY LUNA, MARIO BROSS, PEPPA PIG, TOY STORY, KUNG FU PANDA, POKEMON, MONSTERS, SUPER HEROES, TOPA, PIRATAS, DISNEY, ENTRE OTROS...</p>
+                        <a href="#0" class="btn btn-danger">
+                            <i class="material-icons movericon">event</i>
+                            <span>Reservar Tu Evento</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card card-blog">
+                    <div class="card-header card-header-image">
+                        <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/infantil1.png" style="width: auto; height: 300px;"/>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/Coco.png" style="width: auto; height: 300px;"/>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/infantil2.png" style="width: auto; height: 300px;"/>
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                        <div class="card-title">
+                            <strong>Este año será asombroso...</strong>
+                        </div>
+                    </div>                    
+                    <div class="card-body">
+                        <h6 class="card-category text-info">EVENTOS INFANTILES</h6>
+                        <p class="card-description">
+                            FIESTAS INFANTILES Y RECREACIONISTAS EN BOGOTÁ - SHOW’S MUSICALES Y RECREADORES EN TODO COLOMBIA. Todo en Alquiler de Inflables Infantiles en Bogota.
+                        </p>
+                        <h:form>
+                            <h:commandLink class="td-actions btn btn-info pull-right" actionListener="#"
+                                           a:data-toggle="modal" a:data-target="#modalEventoInfantil" rel="tooltip">
+                                <f:ajax render=":modalEventoInfantilContent"/>
+                                <i class="material-icons">more</i>&nbsp;
+                                <span>Ver más</span>
+                            </h:commandLink>
+                            <h:commandLink class="td-actions btn btn-warning pull-right video-btn" actionListener="#"
+                                           a:data-toggle="modal" a:data-target="#modalVideo" rel="tooltip" 
+                                           a:data-src="https://www.youtube.com/embed/fZduQ1Nyj7M">
+                                <f:ajax render=":modalContentVideo"/>
+                                <i class="material-icons">videocam</i>&nbsp;
+                                <span>Ver Video</span>
+                            </h:commandLink> 
+                        </h:form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card card-blog">
+                    <div class="card-header card-header-image">
+                        <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/eventos-empresariales.png" style="width: auto; height: 300px;"/>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/eventos-empresariales3.png" style="width: auto; height: 300px;"/>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/eventos-empresariales1.png" style="width: auto; height: 300px;"/>
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                        <div class="card-title">
+                            <strong>¡Tenemos los eventos con convertura para tu empresa!</strong>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-category text-success">EVENTOS EMPRESARIALES</h6>
+                        <p class="card-description">
+                            Somos Especialistas en Eventos de gran Impacto - Tenemos Shows Exclusivos para cada Ocasión.
+                            Personajes Exclusivos en Cada Presentacion.
+                        </p>
+                        <h:form>
+                            <h:commandLink class="td-actions btn btn-success pull-right" actionListener="#"
+                                           a:data-toggle="modal" a:data-target="#modalEventoEmpresa" rel="tooltip">
+                                <f:ajax render=":modalEventoEmpresaContent"/>
+                                <i class="material-icons">more</i>&nbsp;
+                                <span>Ver más</span>
+                            </h:commandLink> 
+                            <h:commandLink class="td-actions btn btn-warning pull-right video-btn" actionListener="#"
+                                           a:data-toggle="modal" a:data-target="#modalVideo" rel="tooltip"
+                                           a:data-src="https://www.youtube.com/embed/jfnxTMhMKIA">
+                                <f:ajax render=":modalContentVideo"/>
+                                <i class="material-icons">videocam</i>&nbsp;
+                                <span>Ver Video</span>
+                            </h:commandLink> 
+                        </h:form>
+                    </div>
+                </div>
+            </div>
+        </div>        
         
-        <!--HEMOS ENTENDIDO REPOSITORIOS GIT-->
+
+
         <h:panelGroup layout="block" rendered="#{sessionController.user.rol.id eq 1}">            
             <ui:include src="/WEB-INF/includes/dashboard/administrador.xhtml"/>
         </h:panelGroup>
-        <h:panelGroup layout="block" rendered="#{sessionController.user.rol.id eq 4}">
+        <h:panelGroup layout="block" rendered="#{sessionController.user.rol.id eq 2}">
             <ui:include src="/WEB-INF/includes/dashboard/coordinador.xhtml"/>
         </h:panelGroup>
-        <h:panelGroup layout="block" rendered="#{sessionController.user.rol.id eq 2}">
+        <h:panelGroup layout="block" rendered="#{sessionController.user.rol.id eq 3}">
             <ui:include src="/WEB-INF/includes/dashboard/recreador.xhtml"/>
         </h:panelGroup>         
-        <h:panelGroup layout="block" rendered="#{sessionController.user.rol.id eq 3}">
+        <h:panelGroup layout="block" rendered="#{sessionController.user.rol.id eq 4}">
             <ui:include src="/WEB-INF/includes/dashboard/cliente.xhtml"/>
         </h:panelGroup> 
     </ui:define>
+
+    <ui:define name="modals-page">
+
+        <!--modal video-->
+        <div class="modal fade" id="modalVideo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <h:form prependId="false">
+                    <h:panelGroup id="modalContentVideo" class="modal-content" layout="block">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title titulom" id="exampleModalLabel">EVENTOS INFANTILES Y EMPRESARIALES</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe class="embed-responsive-item" src="" id="video"  allowscriptaccess="always">></iframe>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary letra-boton" data-dismiss="modal">ENTENDIDO</button>
+                            </div>
+                        </div>
+                    </h:panelGroup>
+                </h:form>
+            </div>
+        </div>
+        <!--modal video-->
+
+        <!--modal infantil-->
+        <div class="modal fade" id="modalEventoInfantil" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <h:form prependId="false">
+                    <h:panelGroup id="modalEventoInfantilContent" class="modal-content" layout="block">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title titulom" id="exampleModalLabel">EVENTOS INFANTILES</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary letra-boton" data-dismiss="modal">ENTENDIDO</button>
+                            </div>
+                        </div>
+                    </h:panelGroup>
+                </h:form>
+            </div>
+        </div>
+        <!--modal infantil-->
+
+
+    </ui:define>
+
 </ui:composition>
 
